# talking_clock

./: .gitignore  README.md  User_Manual.md
talking-clock-audio/: LOCALE_BUILDER_PROMPT.md  README.md  pyproject.toml  speaker_test.yaml  time_format_prompt.md  time_phrases_template.yaml
talking-clock-audio/audio/en_GB_alan_medium/: generation_info.json
talking-clock-audio/audio/en_GB_alan_medium/rules/: broadcast_rules.json  (+3 more)
talking-clock-audio/audio/en_US_amy_medium/: generation_info.json
talking-clock-audio/audio/en_US_lessac_medium/: generation_info.json  vocab.json
talking-clock-audio/audio/en_US_lessac_medium_broadcast/: config.json
talking-clock-audio/audio/en_US_lessac_medium_standard/: vocab.json
talking-clock-audio/audio/en_US_libritts_high/: generation_info.json
talking-clock-audio/audio/nl_NL_alex_medium/: generation_info.json
talking-clock-audio/audio/nl_NL_pim_medium/: generation_info.json
talking-clock-audio/audio/nl_NL_ronnie_medium/: vocab.json
talking-clock-audio/audio/nl_NL_ronnie_medium_broadcast/: config.json
talking-clock-audio/audio/nl_NL_ronnie_medium_standard/: vocab.json
talking-clock-audio/src/talking_clock_audio/: __init__.py  cli.py  debug_generator.py  deploy.py  phrase_generator.py  pico_rules.py  rules_generator.py  tts_generator.py  voice_manager.py
talking-clock-audio/tests/: speaker_test.yaml  test_phrase_generator.py  test_rules.py  test_voice_manager.py  test_voice_scan.py
talking-clock-audio/time_formats/: example.yaml  time_phrases_en_GB.yaml  time_phrases_en_US.yaml  time_phrases_nl_NL.yaml
(+41 files in other folders)
